@@ -1,5 +1,8 @@
 CHANGE LOG
 
+2011-02-14
+* fixed issue where urls that that had escaped characters would not work except in Firefox
+
 2011-01-09
 
 * added a change log to the homepage
